fix bag on IOS

--- a/src/app/CommonUI/Pages/pages-with-nav/pages-with-nav.component.scss
+++ b/src/app/CommonUI/Pages/pages-with-nav/pages-with-nav.component.scss
@@ -6,6 +6,8 @@
     .bottom-nav-container{
         display: block;
         font-family: var(--font-bold);
+        padding-bottom: 1rem;
+        background-color: var(--white-backgrounds);
     }
 }
 
